<package format="2">
  <name>tu_nguyen</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for tu_nguyen</p>
    <p>This package contains configuration data, 3D models and launch files
for tu_nguyen robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
   
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>vision_opencv</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>vision_opencv</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_exectime</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>